app/styles/ui/dialogs/_release-notes.scss
@import '../../../styles/variables';

#release-notes {
  max-height: 500px;
  max-width: 800px;
  min-width: 500px;

  .dialog-content {
    // we'll own the layout inside here
    overflow-x: hidden;
    overflow-y: auto;
    max-height: 335px;
    padding: var(--spacing) var(--spacing-triple);
  }

  .dialog-header {
    height: 100px;

    background: url('../static/common/release-note-header-left.svg') no-repeat left var(--spacing-double) top var(--spacing-half) / auto 90px,
      url('../static/common/release-note-header-right.svg') no-repeat right var(--spacing-double) top var(--spacing-half) / auto 90px;

    h1 {
      display: flex;
      flex-direction: column;
      text-align: center;

      .version {
        font-size: 14px;
        font-weight: var(--font-weight-semibold);
      }

      .date {
        font-size: 11px;
        color: var(--text-secondary-color);
      }
    }
  }

  .dialog-footer {
    flex-direction: row;
    justify-content: space-between;
    gap: var(--spacing);
  }

  ul {
    list-style: none;
    padding-left: 0;

    li {
      padding-left: 0;
    }
  }

  a.close {
    align-self: flex-start;
    z-index: 1;
  }

  .container {
    display: flex;
    flex-direction: row;
    overflow-x: hidden;
    justify-content: space-around;

    .column {
      flex: 1 1 275px;
      margin: 0 calc(var(--spacing) * 1.5) 0 0;
      height: 100%;

      .section {
        margin: var(--spacing-double) 0;
        .header {
          font-size: 12px;
          font-weight: var(--font-weight-semibold);
        }
      }
    }
  }
}

